force-app/main/default/objects/Configuration_Option__c/Configuration_Option__c.object-meta.xml
<CustomObject>
    <label>Configuration Option</label>
    <nameField>
        <label>Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>