force-app/main/default/objects/Configuration_Option__c/fields/Configuration_Plan__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Plan__c</fullName>
    <description>Parent&apos;s Product related Plan</description>
    <formula>Configuration_Product__r.Configuration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Configuration Plan OLD</label>
    <type>Text</type>
</CustomField>