force-app/main/default/objects/Configuration_Option__c/fields/Configuration_Product__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Product__c</fullName>
    <label>Configuration Product</label>
    <referenceTo>Configuration_Product__c</referenceTo>
    <relationshipName>Configuration_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>