force-app/main/default/objects/Configuration_Option__c/fields/Cost_Category__c.field-meta.xml
<CustomField>
    <fullName>Cost_Category__c</fullName>
    <label>Cost Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Cost_Categories</valueSetName>
    </valueSet>
</CustomField>