force-app/main/default/objects/Configuration_Option__c/fields/Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Cost_Type__c</fullName>
    <description>Product Item Cost Type</description>
    <inlineHelpText>Product Item Cost Type</inlineHelpText>
    <label>Cost Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Cost_Types</valueSetName>
    </valueSet>
</CustomField>