force-app/main/default/objects/Configuration_Option__c/fields/CostCategory__c.field-meta.xml
<CustomField>
    <fullName>CostCategory__c</fullName>
    <label>Cost Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Cost_Categories</valueSetName>
    </valueSet>
</CustomField>