force-app/main/default/objects/Configuration_Option__c/fields/fxCostCategory__c.field-meta.xml
<CustomField>
    <fullName>fxCostCategory__c</fullName>
    <formula>TEXT(Product__r.CostCategory__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxCostCategory</label>
    <type>Text</type>
</CustomField>