force-app/main/default/objects/Configuration_Option__c/fields/fxCostType__c.field-meta.xml
<CustomField>
    <fullName>fxCostType__c</fullName>
    <formula>TEXT(Product__r.Cost_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxCostType</label>
    <type>Text</type>
</CustomField>