force-app/main/default/objects/Configuration_Option__c/fields/fxInstallationHours__c.field-meta.xml
<CustomField>
    <fullName>fxInstallationHours__c</fullName>
    <formula>InstallationTimePerUnit__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxInstallationHours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>