force-app/main/default/objects/Configuration_Option__c/fields/fxInstallationMins__c.field-meta.xml
<CustomField>
    <fullName>fxInstallationMins__c</fullName>
    <formula>InstallationHours__c * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxInstallationMins</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>