force-app/main/default/objects/Configuration_Option__c/fields/fxProductCategory__c.field-meta.xml
<CustomField>
    <fullName>fxProductCategory__c</fullName>
    <formula>TEXT(Product__r.ProductCategory__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxProductCategory</label>
    <type>Text</type>
</CustomField>