force-app/main/default/objects/Configuration_Option__c/fields/fxUoM__c.field-meta.xml
<CustomField>
    <fullName>fxUoM__c</fullName>
    <formula>TEXT(Product__r.QuantityUnitOfMeasure)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxUoM</label>
    <type>Text</type>
</CustomField>