force-app/main/default/objects/Configuration_Option__c/fields/hasInstallation__c.field-meta.xml
<CustomField>
    <fullName>hasInstallation__c</fullName>
    <description>To decide whether items are part of installation or not</description>
    <formula>OR(TEXT(Cost_Category__c) = &apos;Wages&apos;,TEXT(Cost_Type__c) = &apos;Services&apos;)</formula>
    <label>hasInstallation</label>
    <type>Checkbox</type>
</CustomField>