force-app/main/default/objects/Configuration_Option__c/fields/hasProductionTime__c.field-meta.xml
<CustomField>
    <fullName>hasProductionTime__c</fullName>
    <formula>IF( OR (ProductionDays__c &gt;0, ProductionExtraDays__c &gt;0), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hasProductionTime</label>
    <type>Checkbox</type>
</CustomField>