force-app/main/default/objects/Configuration_Option__c/fields/hasServices__c.field-meta.xml
<CustomField>
    <fullName>hasServices__c</fullName>
    <formula>TEXT(Product__r.Cost_Type__c) = &apos;Services&apos;</formula>
    <label>hasServices</label>
    <type>Checkbox</type>
</CustomField>