force-app/main/default/objects/Configuration_Option__c/fields/hasSpecialProduct__c.field-meta.xml
<CustomField>
    <fullName>hasSpecialProduct__c</fullName>
    <description>Indicates if there configuration Item refers to a Product that requires Manual Processing or needs special handling</description>
    <formula>IF((Product__r.Special__c ||  Product__r.Manual_Processing__c), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hasSpecialProduct</label>
    <type>Checkbox</type>
</CustomField>