force-app/main/default/objects/Configuration_Option__c/fields/Installation_Hours__c.field-meta.xml
<CustomField>
    <fullName>Installation_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Installation Hours OLD</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>