force-app/main/default/objects/Configuration_Option__c/fields/Installation_Time_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Installation_Time_Per_Unit__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Estimated Installation Time per Unit from Installation Time Object</description>
    <inlineHelpText>Estimated Installation Time per Unit from Installation Time Object</inlineHelpText>
    <label>Installation_Time Per_Unit OLD</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>