force-app/main/default/objects/Configuration_Option__c/fields/InstallationHours__c.field-meta.xml
<CustomField>
    <fullName>InstallationHours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Installation Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>