force-app/main/default/objects/Configuration_Option__c/fields/InstallationTimePerUnit__c.field-meta.xml
<CustomField>
    <fullName>InstallationTimePerUnit__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Estimated Installation Time per Unit from Installation Time Object</description>
    <inlineHelpText>Estimated Installation Time per Unit from Installation Time Object</inlineHelpText>
    <label>Installation Time Per Unit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>