force-app/main/default/objects/Configuration_Option__c/fields/isInstallationTime__c.field-meta.xml
<CustomField>
    <fullName>isInstallationTime__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates If the Item is Installation Service related Time</description>
    <inlineHelpText>Indicates If the Item is Installation Service related Time</inlineHelpText>
    <label>isInstallationTime</label>
    <type>Checkbox</type>
</CustomField>