force-app/main/default/objects/Configuration_Option__c/fields/isSpecialItem__c.field-meta.xml
<CustomField>
    <fullName>isSpecialItem__c</fullName>
    <description>Indicates if there configuration Item requires Manual Processing or needs special handling</description>
    <formula>IF (hasSpecialProduct__c, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isSpecialItem</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>