force-app/main/default/objects/Configuration_Option__c/fields/Local_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Local_Supplier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Local Supplier</label>
    <type>Checkbox</type>
</CustomField>