force-app/main/default/objects/Configuration_Option__c/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <formula>Configuration_Product__r.Configuration__r.Opportunity__r.Opportunity_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Number OLD</label>
    <type>Text</type>
</CustomField>