force-app/main/default/objects/Configuration_Option__c/fields/Parameter_Code__c.field-meta.xml
<CustomField>
    <fullName>Parameter_Code__c</fullName>
    <label>Parameter Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>