force-app/main/default/objects/Configuration_Option__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Product Entry in product2 Table</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Configuration_Options</relationshipName>
    <type>Lookup</type>
</CustomField>