force-app/main/default/objects/Configuration_Option__c/fields/ProductionDays__c.field-meta.xml
<CustomField>
    <fullName>ProductionDays__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Production Days OLD</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>