force-app/main/default/objects/Configuration_Option__c/fields/ProductionExtraDays__c.field-meta.xml
<CustomField>
    <fullName>ProductionExtraDays__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Production Extra Days</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>