force-app/main/default/objects/Configuration_Option__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The Quantity of an Item per Unit of Measure</description>
    <inlineHelpText>The Quantity of an Item per Unit of Measure</inlineHelpText>
    <label>Quantity</label>
    <precision>14</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>