force-app/main/default/objects/Configuration_Option__c/fields/Related_Configuration_Option__c.field-meta.xml
<CustomField>
    <fullName>Related_Configuration_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Configuration Option OLD</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Configuration_Option__c.fxProductCategory__c</field>
            <operation>equals</operation>
            <value>Product Options</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Configuration_Option__c</referenceTo>
    <relationshipLabel>Configuration Items</relationshipLabel>
    <relationshipName>Related_Configuration_Options</relationshipName>
    <type>Lookup</type>
</CustomField>