force-app/main/default/objects/Configuration_Option__c/fields/RVN__c.field-meta.xml
<CustomField>
    <fullName>RVN__c</fullName>
    <description>Autogenerated RVN for all Plan Types</description>
    <formula>Configuration_Product__r.RVN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RVN</label>
    <type>Text</type>
</CustomField>