force-app/main/default/objects/Configuration_Option__c/fields/RVN_Number__c.field-meta.xml
<CustomField>
    <fullName>RVN_Number__c</fullName>
    <formula>Configuration_Product__r.RVN_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RVN Number</label>
    <type>Text</type>
</CustomField>