force-app/main/default/objects/Configuration_Option__c/fields/Sales_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Code__c</fullName>
    <label>Sales Code OLD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>