force-app/main/default/objects/Configuration_Option__c/fields/Sovelia_Id__c.field-meta.xml
<CustomField>
    <fullName>Sovelia_Id__c</fullName>
    <formula>Configuration_Product__r.Configuration__r.Sovelia_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sovelia Id OLD</label>
    <type>Text</type>
</CustomField>