force-app/main/default/objects/Configuration_Option__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <label>Unique Id OLD</label>
    <length>50</length>
    <type>Text</type>
</CustomField>