force-app/main/default/objects/Configuration_Option__c/fields/Unit_Of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_Of_Measure__c</fullName>
    <label>Unit Of Measure OLD</label>
    <length>10</length>
    <type>Text</type>
</CustomField>