force-app/main/default/objects/Configuration_Option__c/fields/Visual_Id__c.field-meta.xml
<CustomField>
    <fullName>Visual_Id__c</fullName>
    <formula>Configuration_Product__r.Configuration__r.Visual_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visual Id</label>
    <type>Text</type>
</CustomField>