force-app/main/default/objects/Configuration_Option__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Configuration_Product__c</columns>
    <columns>Product_Model__c</columns>
    <columns>Cost_Type__c</columns>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Sales_Code__c</columns>
    <columns>Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>