force-app/main/default/objects/Configuration_Option__c/listViews/Installation_Time.listView-meta.xml
<ListView>
    <fullName>Installation_Time</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>time</value>
    </filters>
    <label>Installation Time</label>
</ListView>